# ros2-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  ai_solution.py  e2e_turtle_test.py  mock_tf_tree_generator.py  py  pyproject.toml
.grok-plugin/: plugin.json
docker/: entrypoint.sh
docs/: BOUNTY.md  CURSOR_MCP_CONFIG.md  CURSOR_MCP_CONFIG.md ---  HOST_SETUP.md  LIVE_VS_MOCK_SAFETY_MATRIX.md  MCP_HOST_CONFIG.md  MODE_SAFETY_MATRIX.md  ROADMAP.md  action-goal-status-tools.md  allowlist-cli.md  backend.md  demo_update.md  offline-agent-setup.md  service-call-schema-validation.md  tools-list-pretty-table.md
examples/: action_goal_sample.txt  action_list_sample.txt  bag_info_sample.txt  claude_desktop_config.json  cursor_mcp.json  diagnostics_echo_sample.txt  doctor_report_sample.txt  grok_config.toml  interface_list_sample.txt  interface_show_sample.txt  launch_list_sample.txt  lifecycle_list_sample.txt  node_info_sample.txt  node_list_sample.txt  param_list_sample.txt  service_call_sample.txt  service_call_wave2.txt  service_list_sample.txt  tf_echo_sample.txt  tf_frame_list_sample.txt  tf_frame_tree_sample.txt  tf_tree_sample.txt  topic_bw_sample.txt  topic_echo_sample.txt  topic_echo_wave2.txt  topic_hz_sample.txt  topic_info_verbose.txt  topic_list_sample.txt  windows_paths.txt
fixtures/: interface_show_sample.txt  tf_frame_tree_sample.txt
scripts/: create-bounties.mjs
src/: config.py  main.py  mcp_server.py  publish.py
tests/: test_action_goal_sample_fixture.py  test_action_list_sample_fixture.py  test_allowlist.py  test_backends.py  test_bag_info.py  (+49 more)
(+27 files in other folders)
